[package]
name = "not_enough_asserts"
version = "1.4.0"
edition = "2024"
description = "A collection of useful asserts."
license = "MIT"
homepage = "https://github.com/alordash/not_enough_asserts"
repository = "https://github.com/alordash/not_enough_asserts"
readme = "README.md"

[dependencies]
typeid = "1.0.3"